--- a/styles/slider.less
+++ b/styles/slider.less
@@ -61,5 +61,7 @@
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: transparent;
 
 }
